# cogsieve

./: .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
demos/solar_siting/: README.md  run.py  screens.py
demos/tree_equity/: README.md  run.py  screens.py
demos/wildfire_wui/: README.md  run.py  screens.py
scripts/: bench_rasterstats.py  build_canopy_cog.py  build_landfire_cog.py  build_preset_geojson.py  build_slope_cog.py  fetch_la_block_groups.py  fetch_san_diego_parcels.py  screenshot_streamlit.py  simplify_streamlit_geometries.py
src/cogsieve/: __init__.py  coverage.py  io.py  pipeline.py  screen.py
streamlit_data/: README.md  solar_slope_fractions.parquet
streamlit_data/presets/: solar_best_candidates_only.json  solar_broad_screen.json  solar_default.json  wildfire_any_touch.json  wildfire_default.json  wildfire_heavily_burned.json
tests/: conftest.py  test_coverage.py
